--- a/css/deer.css
+++ b/css/deer.css
@@ -1,9 +1,32 @@
-html {
-    background-color: black;
+
+
+
+.darkForest {
+    background: url("https://data.whicdn.com/images/293078422/original.jpg");
+    position: fixed;
+  top: 0;
+  left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+    background-origin: content-box;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    z-index: -2;
 }
 
-  
-  @keyframes glow{
+div #deer {
+  /* animation: glow 1.5s linear infinite alternate; */
+  background: url("/animals/deer-removebg.png");
+  height: 400px;
+  width: 400px;
+  z-index: 9999;
+
+  }
+
+
+@keyframes glow{
     to {
       /* box-shadow: 0px 0px 30px 20px rgb(225, 226, 230); */
       -webkit-filter: drop-shadow(15px 15px 0 dark blue)
@@ -14,17 +37,8 @@ transform: unset;
 
     }
   }
-/* 
-  #deerHolder {
-      margin-left: 100px;
-      margin-top: 50px;
-      width: 100%
-  } */
 
 
-  img {
-    animation: glow 1.5s linear infinite alternate;
-    }
   
   
 
