--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 
 
 html, body{
-  /* height: 100%; */
+  height: 100%;
   margin: 0px;
   position: absolute;
   width: 100%;
   height: 100%;
+  position: fixed;
 }
 
   #hogwartsBackground{
@@ -15,17 +16,22 @@ html, body{
     background-repeat: no-repeat;
     background-size: cover; 
     background-position: center;
-    position: relative;
-    margin-top: -20%;
+    position: absolute;
+
   }
 
   #formWrapper {
     width:90%;
     max-width: 80%;
-    min-height: 80%;
+    max-height: 80%;
     margin: 0px auto;
     background-size: 100%;
     background-color: rgba(0,0,0,0.6);
+    overflow-y: scroll;
+    position: fixed; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 
   h1, #formWrapper > form{
@@ -47,14 +53,21 @@ html, body{
   }
   
   #formWrapper > form > button[type="submit"]{
-    width:160px;
+    width:50%;
     display: block;
     margin:0px auto;
-    font-size: 26px;
+    font-size: 44px;
     text-decoration: none;
     text-align: center;
     height: auto;
+    background-color: rgba(139, 42, 0, 0.66);
   }
+
+
+  #formWrapper > form > button[type="submit"]:hover{
+    background-color: rgba(139, 42, 0);
+  }
+
 
   h1{ 
     text-align: center;
@@ -62,20 +75,6 @@ html, body{
     margin-bottom: -20px;
   }
 
-  a #deerButton {
-    text-align: center;
-    width: 200px;
-    font-family: 'Jolly Lodger';
-    font-size: 22px;
-    letter-spacing: 1px;
-    padding:0px 6px;
-    background-color: rgba(0,0,0,0.4);
-    border: 1px solid white;
-    color: #fff;
-    margin-top: 40px;
-    display: block;
-    margin:0px auto;
-  }
 
 
 
@@ -87,38 +86,7 @@ html, body{
   height: 0px;
 }
 
-button {
-  width: 100px;
-  height: 20px;
-  color: wheat;
-  background-color: gray;
-  position: relative;
-  clear: both;
-}
 
-
-
-div.lightning {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(255,255,255,.5);
-  opacity: 0;
-  animation: bolt .5s;
-  animation-delay: 2s;
-  animation-iteration-count: 1;
-}
-
-img.lightning-bolt {
-  position: relative;
-  top: 100px;
-}
-
-@keyframes bolt {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
 
 
 #hallBackground{
@@ -136,292 +104,152 @@ img.lightning-bolt {
 }
 
 #hallWrapper {
-  width:90%;
-  max-width: 500px;
-  min-height: 500px;
+  max-width: 50%;
+  min-width: 30%;
+  max-height: 80%;
+  min-height: 80%;
   margin:auto;
-  background-color: rgba(0,0,0,0.6);
+  background-color: rgba(0,0,0,0.70);
   color: white;
-}
-
-#cloud-circle {
-  background: coral;
-  border-radius: 50%;
-  box-shadow: 200px 200px 50px 0px #000;
-  width: 180px;
-  height: 180px;
-}
-
-
-
-
-
-
-
-#background-wrap {
-  padding-top: 50px;
-  height: 20%;
-  position: fixed;
-  right: 0;
-  top: 0;
-  bottom: 2;
-  left: 0;  
   z-index: 1;
-  opacity: .25;
 }
 
-
-
- @-webkit-keyframes animateCloud {
-  0% {
-      margin-left: -1000px;
-  }
-  100% {
-      margin-left: 100%;
-  }
-}
-
-@-moz-keyframes animateCloud {
-  0% {
-      margin-left: -1000px;
-  }
-  100% {
-      margin-left: 100%;
-  }
-}
-
-@keyframes animateCloud {
-  0% {
-      margin-left: -1000px;
-  }
-  100% {
-      margin-left: 100%;
-  }
-} 
-
-.x1 {
--webkit-animation: animateCloud 45s linear infinite;
--moz-animation: animateCloud 45s linear infinite;
-animation: animateCloud 45s linear infinite;
-
--webkit-transform: scale(0.65);
--moz-transform: scale(0.65);
-transform: scale(0.65);
-} 
-
-.x2 {
--webkit-animation: animateCloud 40s linear infinite;
--moz-animation: animateCloud 40s linear infinite;
-animation: animateCloud 40s linear infinite;
-
--webkit-transform: scale(0.3);
--moz-transform: scale(0.3);
-transform: scale(0.3);
-}
-
-.x3 {
--webkit-animation: animateCloud 30s linear infinite;
--moz-animation: animateCloud 30s linear infinite;
-animation: animateCloud 30s linear infinite;
-
--webkit-transform: scale(0.5);
--moz-transform: scale(0.5);
-transform: scale(0.5);
-}
-
-.x4 {
--webkit-animation: animateCloud 18s linear infinite;
--moz-animation: animateCloud 18s linear infinite;
-animation: animateCloud 18s linear infinite;
-
--webkit-transform: scale(0.4);
--moz-transform: scale(0.4);
-transform: scale(0.4);
-}
-
-.x5 {
--webkit-animation: animateCloud 25s linear infinite;
--moz-animation: animateCloud 25s linear infinite;
-animation: animateCloud 25s linear infinite;
-
--webkit-transform: scale(0.55);
--moz-transform: scale(0.55);
-transform: scale(0.55);
-}
-
-
-
-.cloud {
-background: #fff;
-background: -moz-linear-gradient(top,  #fff 5%, #f1f1f1 100%);
-background: -webkit-gradient(linear, left top, left bottom, color-stop(5%,#fff), color-stop(100%,#f1f1f1));
-background: -webkit-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-background: -o-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-background: -ms-linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-background: linear-gradient(top,  #fff 5%,#f1f1f1 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#f1f1f1',GradientType=0 );
-
--webkit-border-radius: 100px;
--moz-border-radius: 100px;
-border-radius: 100px;
-
--webkit-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
--moz-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-box-shadow: 0 8px 5px rgba(0, 0, 0, 0.1);
-
-height: 120px;
-position: relative;
-width: 350px;
-}
-
-.cloud:after, .cloud:before {
-  background: #fff;
-content: '';
-position: absolute;
-z-index: -1;
-}
-
-.cloud:after {
--webkit-border-radius: 100px;
--moz-border-radius: 100px;
-border-radius: 100px;
-
-height: 100px;
-left: 50px;
-top: -50px;
-width: 100px;
-}
-
-.cloud:before {
--webkit-border-radius: 200px;
--moz-border-radius: 200px;
-border-radius: 200px;
-
-width: 180px;
-height: 180px;
-right: 50px;
-top: -90px;
-}
-
-
-
-
-
-
-
-
-
-img.cloudy {
-  width: 210%;
-  top: 0;
-  opacity: .75;
-  height: 10%;
-  z-index: 9999;
-  margin-left: -55%;
-  -webkit-animation: animateCloud 10s linear infinite;
--moz-animation: animateCloud 10s linear infinite;
-animation: animateCloud 30s linear infinite;
-
--webkit-transform: scale(1);
--moz-transform: scale(1);
-transform: scale(1);
-clip-path: polygon(0 0, 100% 0, 50% 100%, 55% 100%);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.bg{
-  position: fixed;
-  top: 0;
-  left: 0;
+#showHouse {
   width: 100%;
   height: 100%;
-  background: url("https://pm1.narvii.com/6842/7cdecddeb84a4d589ed629d58158237b1a56a76cv2_hq.jpg");
-  background-position: center center;
-  background-origin: content-box;
-  background-size: cover;
-  background-attachment: fixed;
-  z-index: -2;
+  position: absolute;
+
 }
 
 
-.lightning{
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url("https://pm1.narvii.com/6842/7cdecddeb84a4d589ed629d58158237b1a56a76cv2_hq.jpg");
-  background-position: center center;
-  background-origin: content-box;
-  background-size: cover;
-  background-attachment: fixed;
-  -webkit-filter: brightness(3);
-  filter: brightness(3);
-  -o-filter: brightness(3);
-  -moz-filter: brightness(3);
-  z-index: -1;
-}
 
-/* .flashit{
--webkit-animation: flash ease-out 7s infinite;
--moz-animation: flash ease-out 7s infinite;
-animation: flash ease-out 7s infinite;
-animation-delay: 2s;
-}
 
-@-webkit-keyframes flash {
-	from { opacity: 0; } 
-  92% { opacity: 0; }
-	93% { opacity: 0.6; }
-  94% { opacity: 0.2; }
-  96% { opacity: 0.9; } 
-	to { opacity: 0; }
-}
-
-@keyframes flash {
-	from { opacity: 0; } 
-    92% { opacity: 0; }
-	93% { opacity: 0.6; }
-    94% { opacity: 0.2; }
-    96% { opacity: 1; } 
-	to { opacity: 0; }
-} */
-
-.weatherContainer {
+.weatherContainer{
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 20%;
-
+  height: 100vh;
+  background: url("https://pm1.narvii.com/6842/7cdecddeb84a4d589ed629d58158237b1a56a76cv2_hq.jpg");
+  background-size: cover;
+  background-position: center center;
+  z-index: -1;
 }
+
+.clear-day, .partly-cloudy-day, .cloudy, .rain, .sleet, .snow, .wind, .fog, .clear-night, .partly-cloudy-night {
+  position: absolute;
+  background-size: 100% 300px;
+  width: 100%;
+  height: 300px;
+  opacity: .5;
+  clip-path: polygon(0% 0%, 0% 30%, 25% 100%, 75% 100%, 100% 16%, 100% 0%);
+}
+
+.clear-day{
+
+animation: animate 800000s linear infinite; 
+background: url("../img/sun.png");
+background-size: 100%;
+opacity: 1.5;
+background-repeat: no-repeat;
+clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 75% 100%, 100% 16%, 100% 0%);
+  }
+
+.wind{
+      background: url("../img/wind.gif"); 
+      animation: animate 60s linear infinite;
+  }
+
+.partly-cloudy-day{
+  background: url("../img/partly-cloudy-day.png");
+  animation: animate 600s linear infinite;
+  background-size: 700px;
+}
+
+.snow{
+  background: url("../img/snow2.png");
+  animation: snow 100s linear infinite;
+}
+
+.sleet{
+  background:url("../img/sleet.png");
+  animation: snow 5s linear infinite;
+  background-size: 10% 300px;
+}
+
+.rain{
+  background: url("../img/rain.gif");
+}
+
+.partly-cloudy-night{ 
+  background: url("../img/partly-cloudy-night.png");
+  animation: animate 900s linear infinite;
+  opacity: .8;
+  filter: brightness(1);
+  background-size: 500px;
+}
+
+.clear-night{
+  background: url("https://i.gifer.com/2iiH.gif");
+  opacity: .9;
+  background-size: 50%;
+  animation: animate 2000s linear infinite;
+}
+
+.cloudy{
+  background: url("../img/cloudy.png");
+  animation: animate 2000s linear infinite;
+  background-size: 700px;
+}
+
+.fog{
+  background: url("../img/fog.png");
+  animation: animate 300s linear infinite;
+  opacity: 1;
+}
+
+@keyframes animate { 
+0% { background-position: 0px; } 
+100% { background-position: -5440px; } 
+}
+
+@keyframes snow {
+0% {background-position: 0px 0px;}
+100% {background-position: 500px 1000px, 400px 400px, 300px 300px;}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
